--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h2>Hello Google</h2>
+  <h2>Hello World</h2>
   <script type="module" src="1.2.3-1.2.5.js"></script>
   <script type="module" src="1.2.4-1.2.6.js"></script>
   <script type="module" src="1.2.7-1.2.10.js"></script>
