--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lab1</title>
 </head>
 <body>
-  <h1>Lab1 Triangle</h1>
+  <h1>Hello World</h1>
   <h3>Open devtools console to see results</h3>
 </body>
 <script src="laba1.js"></script>
