--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lab1</title>
+</head>
+<body>
+  <h1>Hello World</h1>
+  <h3>Open devtools console to see results</h3>
+</body>
+<script src="laba1.js"></script>
+</html>
