--- a/lab_6/index.html
+++ b/lab_6/index.html
@@ -9,6 +9,7 @@
 <body>
   <button id="restart-button">Нова гра</button>
   <button id="newgame-button">Рестарт</button>
+  <div id="moves">Ходи: 0</div>
   <div id="game-container"></div>
   <div id="timer"></div>
 
