--- a/lab_8/index.html
+++ b/lab_8/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="carousel.css">
+  <title>LAB8</title>
+</head>
+<body>
+  <nav id="navbar" class="navbar">
+    <div class="navbar-items">
+        <a href="#">Home</a>
+        <a href="/about">About</a>
+        <a href="/services">Services</a>
+        <a href="/portfolio">Portfolio</a>
+        <a href="/contact">Contact</a>
+    </div>
+    <button id="hamburgerBtn" class="hamburger">&#9776;</button>
+</nav>
 
+<div class="carousel">
+  <div class="slides">
+      <img src="https://img.jabko.ua/image/cache/catalog/products/2021/09/142259/2021-09-14%2021.47.45-420x420.jpg.webp" alt="Slide 1">
+      <img src="https://img.jabko.ua/image/cache/catalog/products/2022/09/072335/photo_2022-09-07_23-29-55-420x420.jpg.webp" alt="Slide 2">
+      <img src="https://img.jabko.ua/image/cache/catalog/products/2023/08/251610/1-420x420.jpg.webp" alt="Slide 3">
+      <img src="https://img.jabko.ua/image/cache/catalog/products/2021/09/142254/2021-09-14%2021.47.41-420x420.jpg.webp" alt="Slide 3">
+      <img src="https://img.jabko.ua/image/cache/catalog/products/2024/01/190923/13-420x420.jpg.webp" alt="Slide 3">
+      <img src="https://img.jabko.ua/image/cache/catalog/products/2024/01/221734/kjhgbnv-420x420.jpg.webp" alt="Slide 3">
+  </div>
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+  <div class="indicators">
+    <div class="indicator" data-slide="0"></div>
+    <div class="indicator" data-slide="1"></div>
+    <div class="indicator" data-slide="2"></div>
+    <div class="indicator" data-slide="3"></div>
+    <div class="indicator" data-slide="4"></div>
+  </div>
+</div>
+
+<div class="large-images">
+  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 1">
+  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 2">
+  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 3">
+</div>
+
+<div class="medium-images">
+  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 1">
+  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 2">
+  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 3">
+</div>
+
+<footer>
+  <div class="footer-items">
+    <a href="#">Home</a>
+    <a href="/about">About</a>
+    <a href="/services">Services</a>
+    <a href="/portfolio">Portfolio</a>
+    <a href="/contact">Contact</a>
+  </div>
+ 
+</footer>
+
+<script type="module" src="script.js"></script>
+</body>
+</html>
