--- a/lab_8/index.html
+++ b/lab_8/index.html
@@ -21,12 +21,12 @@
 
 <div class="carousel">
   <div class="slides">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2021/09/142259/2021-09-14%2021.47.45-420x420.jpg.webp" alt="Slide 1">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2022/09/072335/photo_2022-09-07_23-29-55-420x420.jpg.webp" alt="Slide 2">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2023/08/251610/1-420x420.jpg.webp" alt="Slide 3">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2021/09/142254/2021-09-14%2021.47.41-420x420.jpg.webp" alt="Slide 3">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2024/01/190923/13-420x420.jpg.webp" alt="Slide 3">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2024/01/221734/kjhgbnv-420x420.jpg.webp" alt="Slide 3">
+      <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/bear-1869127_1280.jpg" alt="Teddy Bear">
+      <img src="https://cdn.pixabay.com/photo/2017/01/06/19/15/toy-1959838_1280.jpg" alt="Toy Car">
+      <img src="https://cdn.pixabay.com/photo/2018/10/10/21/17/robot-3734294_1280.jpg" alt="Toy Robot">
+      <img src="https://cdn.pixabay.com/photo/2020/12/06/10/22/toy-5806919_1280.jpg" alt="Stacking Rings">
+      <img src="https://cdn.pixabay.com/photo/2015/10/12/15/01/doll-984782_1280.jpg" alt="Doll">
+      <img src="https://cdn.pixabay.com/photo/2016/01/05/13/58/toys-1121312_1280.jpg" alt="Mixed Toys">
   </div>
   <button class="prev">&#10094;</button>
   <button class="next">&#10095;</button>
@@ -40,15 +40,15 @@
 </div>
 
 <div class="large-images">
-  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 1">
-  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 2">
-  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 3">
+  <img src="https://cdn.pixabay.com/photo/2017/07/30/15/44/teddy-bear-2559703_1280.jpg" alt="Large Teddy">
+  <img src="https://cdn.pixabay.com/photo/2014/12/03/13/55/toy-555619_1280.jpg" alt="Large Toy">
+  <img src="https://cdn.pixabay.com/photo/2020/01/29/20/09/lego-4803813_1280.jpg" alt="Large Lego">
 </div>
 
 <div class="medium-images">
-  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 1">
-  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 2">
-  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 3">
+  <img src="https://cdn.pixabay.com/photo/2020/06/16/11/44/baby-5305342_1280.jpg" alt="Medium Toy 1">
+  <img src="https://cdn.pixabay.com/photo/2022/06/02/13/42/children-7238830_1280.jpg" alt="Medium Toy 2">
+  <img src="https://cdn.pixabay.com/photo/2017/03/17/22/55/toy-car-2153742_1280.jpg" alt="Medium Toy 3">
 </div>
 
 <footer>
@@ -59,7 +59,6 @@
     <a href="/portfolio">Portfolio</a>
     <a href="/contact">Contact</a>
   </div>
- 
 </footer>
 
 <script type="module" src="script.js"></script>
