--- a/lab_8/index.html
+++ b/lab_8/index.html
@@ -21,7 +21,7 @@
 
 <div class="carousel">
   <div class="slides">
-      <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/bear-1869127_1280.jpg" alt="Teddy Bear">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpustunchik.ua%2Fua%2Fonline-school%2Fbiology%2Fzoology%2Fnevozmozhnyje-milashki&psig=AOvVaw0qV5MfPabr917QGrmRRFun&ust=1748426991058000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJCgnp-0w40DFQAAAAAdAAAAABAE" alt="Teddy Bear">
       <img src="https://cdn.pixabay.com/photo/2017/01/06/19/15/toy-1959838_1280.jpg" alt="Toy Car">
       <img src="https://cdn.pixabay.com/photo/2018/10/10/21/17/robot-3734294_1280.jpg" alt="Toy Robot">
       <img src="https://cdn.pixabay.com/photo/2020/12/06/10/22/toy-5806919_1280.jpg" alt="Stacking Rings">
