--- a/lab_8/index.html
+++ b/lab_8/index.html
@@ -21,9 +21,9 @@
 
 <div class="carousel">
   <div class="slides">
-      <img src="https://pustunchik.ua/uploads/school/cache/old/interesting/animals/Nevozmozhnyje-milashki/184712.jpg" alt="Teddy Bear">
-      <img src="https://cdn.pixabay.com/photo/2017/01/06/19/15/toy-1959838_1280.jpg" alt="Toy Car">
-      <img src="https://cdn.pixabay.com/photo/2018/10/10/21/17/robot-3734294_1280.jpg" alt="Toy Robot">
+      <img src="https://content.rozetka.com.ua/goods/images/big/504385329.jpg" alt="Fameli Cat">
+      <img src="https://yu.com.ua/image/cache/catalog/24/Skzoo%20Stray%20Kids/DWAEKKI/g4-700x700.jpg" alt="Toy Car">
+      <img src="https://yu.com.ua/image/cache/catalog/24/Skzoo%20Stray%20Kids/t3-700x700.jpg" alt="Toy Robot">
       <img src="https://cdn.pixabay.com/photo/2020/12/06/10/22/toy-5806919_1280.jpg" alt="Stacking Rings">
       <img src="https://cdn.pixabay.com/photo/2015/10/12/15/01/doll-984782_1280.jpg" alt="Doll">
       <img src="https://cdn.pixabay.com/photo/2016/01/05/13/58/toys-1121312_1280.jpg" alt="Mixed Toys">
