--- a/lab_8/index.html
+++ b/lab_8/index.html
@@ -21,12 +21,12 @@
 
 <div class="carousel">
   <div class="slides">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2021/09/142259/2021-09-14%2021.47.45-420x420.jpg.webp" alt="Slide 1">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2022/09/072335/photo_2022-09-07_23-29-55-420x420.jpg.webp" alt="Slide 2">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2023/08/251610/1-420x420.jpg.webp" alt="Slide 3">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2021/09/142254/2021-09-14%2021.47.41-420x420.jpg.webp" alt="Slide 3">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2024/01/190923/13-420x420.jpg.webp" alt="Slide 3">
-      <img src="https://img.jabko.ua/image/cache/catalog/products/2024/01/221734/kjhgbnv-420x420.jpg.webp" alt="Slide 3">
+      <img src="https://yu.com.ua/image/cache/catalog/24/Skzoo%20Stray%20Kids/DWAEKKI/g4-700x700.jpg" alt="Slide 1">
+      <img src="https://yu.com.ua/image/cache/catalog/24/Skzoo%20Stray%20Kids/t3-700x700.jpg" alt="Slide 2">
+      <img src="https://content.rozetka.com.ua/goods/images/big/504385329.jpg" alt="Slide 3">
+      <img src="https://simpatyashka.com.ua/content/images/17/536x416l50nn0/komplekt-miahkykh-yhrushek-medvedy-i-ukrainr-15755395103671.jpg" alt="Slide 3">
+      <img src="https://st4.depositphotos.com/18417802/22779/i/450/depositphotos_227791034-stock-photo-cute-bear-doll-isolated-white.jpg" alt="Slide 3">
+      <img src="https://simpatyashka.com.ua/content/images/43/536x402l50nn0/myagkaya-igrushka-kotik-23-sm-48949963330526.jpg" alt="Slide 3">
   </div>
   <button class="prev">&#10094;</button>
   <button class="next">&#10095;</button>
@@ -40,15 +40,15 @@
 </div>
 
 <div class="large-images">
-  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 1">
-  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 2">
-  <img src="https://i0.wp.com/cdn.freebiesupply.com/images/large/2x/apple-logo-transparent.png?ssl=1" alt="Large Image 3">
+  <img src="https://kitworks.systems/web/image/product.template/170/image_1024?unique=f0d54b0" alt="Large Image 1">
+  <img src="https://kitworks.systems/web/image/product.template/170/image_1024?unique=f0d54b0" alt="Large Image 2">
+  <img src="https://kitworks.systems/web/image/product.template/170/image_1024?unique=f0d54b0" alt="Large Image 3">
 </div>
 
 <div class="medium-images">
-  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 1">
-  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 2">
-  <img src="https://companieslogo.com/img/orig/GOOG-0ed88f7c.png?t=1633218227" alt="Medium Image 3">
+  <img src="https://prom.ua/cloud-cgi/static/catalog-ui/js/build/portal-portable/base_prom-c0VNO.jpg" alt="Medium Image 1">
+  <img src="https://prom.ua/cloud-cgi/static/catalog-ui/js/build/portal-portable/base_prom-c0VNO.jpg" alt="Medium Image 2">
+  <img src="https://prom.ua/cloud-cgi/static/catalog-ui/js/build/portal-portable/base_prom-c0VNO.jpg" alt="Medium Image 3">
 </div>
 
 <footer>
